2024-06-24  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* configure.ac: Typo fixed in library name.

2024-06-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/wpg.c (ReadWPGImage): Quiet Coverity 427434 "Overflowed
	constant".

	* magick/blob.c (CloseBlob): Quiet Coverity 427439 "Data race
	condition".

	* coders/topol.c (CheckFName): Addess Coverity 427449 "Overflowed
	array index read".

	* magick/blob.c (DetachBlob): Fix location of assert.  Quiet
	Coverity 427429 "Data race condition".
	(DestroyBlob): Quiet Coverity 427446 "Data race condition".

	* magick/magick.c (GetMagickInfoArray): Address Coverity 427435
	"Data race condition".

2024-06-24  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/configure/configure.exe: Needs to be updated,
	because header files are hardcoded in it :(.
	* VisualMagick/configure/configure.cpp: dependency to core_rl_zlib_.lib
	is also configured in C source code - too bad!

	* coders/ora.c: Remove library include hack. Configure.exe should
	do the job.

2024-06-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/static.c: Also need to enable ORA for HasLIBZIP

	* coders/ora.c: Change back to POSIX file format. Fix syntax
	errors so code compiles with libzip.

2024-06-23  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* zlib/contrib/minizip/unzip.c
	zlib/contrib/minizip/unzip.h: Export unzip API
	to DLL calls.

	* coders/Makefile.am: Add dependency to zlib for
	ORA DLL module.

	* coders/ora.c: This version is prepared for Linux
	using libzip.lib.

	* configure.ac: Look for presence of libzip.

	* VisualMagick/configure/configure.cpp: dependency
	to zlib is configured in C source code - too bad!

	* coders/Makefile.am: Missing reference to ora.c.

2024-06-22  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/zlib/LIBRARY.txt: Remove unwanted
	source files from DLL build ioapi.c, iowin32.c,
	miniunz.c, minizip.c, mztools.c, zip.c.

2024-06-16  Fojtik Jaroslav  <JaFojtik@yandex.com>
