@@ -299,6 +299,13 @@ with a client-side image
 map</p></td>
 <td><p>Also known as &quot;HTM&quot;. Requires html2ps to read.</p></td>
 </tr>
+<tr><td><p>HRZ</p></td>
+<td><p>RW</p></td>
+<td><p>Slow-Scan Television
+(SSTV)</p></td>
+<td><p>This a format used when an image is transmitted
+over amateur radio using audio equipment.</p></td>
+</tr>
 <tr><td><p>ICO</p></td>
 <td><p>R</p></td>
 <td><p>Microsoft icon</p></td>
