@@ -1,3 +1,7 @@
+2024-06-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* www/formats.rst: Add an entry for HRZ format.
+
 2024-06-24  Fojtik Jaroslav  <JaFojtik@yandex.com>
 
 	* configure.ac: Typo fixed in library name.
